CREATE TABLE profits
(
    id SERIAL PRIMARY KEY,
    description VARCHAR(255) NOT NULL,
    amount NUMERIC(10, 2) NOT NULL,
    date DATE DEFAULT CURRENT_DATE
);

--sample data
INSERT INTO profits (description, amount, date)
VALUES
    ('Product Sales', 1500.50, '2023-01-05'),
    ('Service Revenue', 2500.75, '2023-01-08'),
    ('Investment Returns', 1000.00, '2023-01-12'),
    ('Royalties', 500.25, '2023-01-15'),
    ('Consulting Fees', 2000.00, '2023-01-20'),
    ('Licensing Fees', 1500.50, '2023-01-22'),
    ('Franchise Fees', 3000.00, '2023-01-25'),
    ('Interest Income', 400.75, '2023-01-28'),
    ('Dividends', 700.00, '2023-02-02'),
    ('Product Sales', 1800.50, '2023-02-05'),
    ('Service Revenue', 2700.75, '2023-02-08'),
    ('Investment Returns', 1100.00, '2023-02-12'),
    ('Royalties', 600.25, '2023-02-15'),
    ('Consulting Fees', 2200.00, '2023-02-20'),
    ('Licensing Fees', 1700.50, '2023-02-22'),
    ('Franchise Fees', 3300.00, '2023-02-25'),
    ('Interest Income', 450.75, '2023-02-28'),
    ('Dividends', 800.00, '2023-03-02'),
    ('Product Sales', 2000.50, '2023-03-05'),
    ('Service Revenue', 2900.75, '2023-03-08'),
    ('Investment Returns', 1200.00, '2023-03-12'),
    ('Royalties', 700.25, '2023-03-15'),
    ('Consulting Fees', 2400.00, '2023-03-20'),
    ('Licensing Fees', 1900.50, '2023-03-22'),
    ('Franchise Fees', 3600.00, '2023-03-25'),
    ('Interest Income', 500.75, '2023-03-28'),
    ('Dividends', 900.00, '2023-04-02'),
    ('Product Sales', 2200.50, '2023-04-05'),
    ('Service Revenue', 3100.75, '2023-04-08'),
    ('Investment Returns', 1300.00, '2023-04-12'),
    ('Royalties', 800.25, '2023-04-15'),
    ('Consulting Fees', 2600.00, '2023-04-20'),
    ('Licensing Fees', 2100.50, '2023-04-22'),
    ('Franchise Fees', 3900.00, '2023-04-25'),
    ('Interest Income', 550.75, '2023-04-28'),
    ('Dividends', 1000.00, '2023-05-02'),
    ('Product Sales', 2400.50, '2023-05-05'),
    ('Service Revenue', 3300.75, '2023-05-08'),
    ('Investment Returns', 1400.00, '2023-05-12'),
    ('Royalties', 900.25, '2023-05-15'),
    ('Consulting Fees', 2800.00, '2023-05-20'),
    ('Licensing Fees', 2300.50, '2023-05-22'),
    ('Franchise Fees', 4200.00, '2023-05-25'),
    ('Interest Income', 600.75, '2023-05-28');
